added getAllAnimeIds
