# public/swagger/swagger-spec.yaml
@@ -14,6 +14,22 @@ paths:
                 $ref: '#/components/schemas/FactModel'
       tags:
         - Fact
+  /api/auth/allIds:
+    get:
+      operationId: AnimeController_whoami
+      summary: Get all id`s
+      parameters: []
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+      tags:
+        - Anime
   /api/user/{animeId}/comment:
     put:
       operationId: AnimeCommentController_addAnimeComment
